[tool.poetry]
name = "diagnostic-mobilite"
version = "0.1.0"
description = ""
authors = ["Alex <alex.pairault@pur.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
certifi = "2020.11.8"
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
